--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,18 +8,45 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "paths": {
-      "@/*":["./src/"],
-      "@Components/*": ["./src/components/*"],
-      "@Constants/*": ["./src/constants/*"],
-      "@Containers/*": ["./src/containers/*"],
-      "@Helpers/*": ["./src/helpers/*"],
-      "@Hooks/*": ["./src/hooks/*"],
-      "@Layouts/*": ["./src/layouts/*"],
-      "@Redux/*": ["./src/redux/*"],
-      "@Router/*": ["./src/router/*"],
-      "@Views/*": ["./src/views/*"],
+      "@/*": [
+        "./src/*"
+      ],
+      "@Components/*": [
+        "./src/components/*"
+      ],
+      "@Constants/*": [
+        "./src/constants/*"
+      ],
+      "@Containers/*": [
+        "./src/containers/*"
+      ],
+      "@Helpers/*": [
+        "./src/helpers/*"
+      ],
+      "@Hooks/*": [
+        "./src/hooks/*"
+      ],
+      "@Layouts/*": [
+        "./src/layouts/*"
+      ],
+      "@Redux/*": [
+        "./src/redux/*"
+      ],
+      "@Router/*": [
+        "./src/router/*"
+      ],
+      "@Views/*": [
+        "./src/views/*"
+      ],
     },
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "public", "build", "dist"]
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "node_modules",
+    "public",
+    "build",
+    "dist"
+  ]
 }
