--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-table": "^8.9.3",
     "bootstrap-icons": "^1.11.3",
     "buffer": "^6.0.3",
+    "chart.js": "^4.5.0",
     "dotenv": "^16.4.5",
     "env-var": "^7.4.1",
     "events": "^3.3.0",
@@ -28,6 +29,7 @@
     "rc-switch": "^4.1.0",
     "react": "^19.1.0",
     "react-big-calendar": "^1.19.2",
+    "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^7.6.0",
     "react-datetime": "^3.2.0",
     "react-dom": "^19.1.0",
