--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "events": "^3.3.0",
     "formik": "^2.4.5",
     "moment": "^2.29.4",
+    "motion": "^12.23.18",
     "prop-types": "^15.8.1",
     "rc-switch": "^4.1.0",
     "react": "^19.1.0",
@@ -33,6 +34,7 @@
     "react-datepicker": "^7.6.0",
     "react-datetime": "^3.2.0",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-dropzone-component": "^3.2.0",
     "react-intl": "^7.1.11",
     "react-perfect-scrollbar": "^1.5.8",
